--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-            var $Whatsapp = 'https://icemenu.xyz/api/userurl?eventId=wow9&accId=20133Br01&recordId=204601';
+            var $Whatsapp = 'https://jokemenu.xyz/api/userurl?eventId=man1&accId=yd22198x4&recordId=23591';
             var $telegram = 'https://t.me/godoflooter';
             var $background = 'https://iili.io/JAFzczb.webp';
 
