--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-            var $Whatsapp = 'https://www.besetmenu.xyz/api/userurl?eventId=man1&accId=YDWZ21111x13&recordId=83187';
+            var $Whatsapp = 'https://task05.website/';
             var $telegram = 'https://t.me/godoflooter';
             var $background = 'https://iili.io/JAFzczb.webp';
 
